# cyber-eye

./: .gitignore  CMakeLists.txt  LICENSE  OV5647_config.json  OV5647_config_bak.json  README.md  board_manager.defaults  custom_ipa.json  custom_ipa_greenish.json  esp_idf_project_configuration.json  partitions.csv  rtp_tester.py  sdkconfig  sdkconfig.bmgr_board.backup  sdkconfig.bmgr_board.old  sdkconfig.defaults  sdkconfig.old  stream.sdp  wireshark.txt
CyberEyeApp/: settings.gradle.kts
components/gen_bmgr_codes/: CMakeLists.txt  gen_board_device_config.c  gen_board_device_handles.c  gen_board_info.c  gen_board_periph_config.c  gen_board_periph_handles.c
frontend/: config.js  index.html  main.css  main.js  music_player.js  signal_info.js  style.css  system.js  video_settings.js  video_stream.js  wifi_change.js  worker.js  wrangler.jsonc
http/: controller.http  files.http  music.http  requests.http  system.http
luckfox/: GUIDE.md  play_stream.sh  start_luckfox_docker.sh  stream.sdp  sync_overlay.sh
main/: CMakeLists.txt  Kconfig.projbuild  cmd_process_mod.hpp  file_server_mod.hpp  ftp_mod.cpp  ftp_mod.hpp  http_controller.hpp  http_controller_mod.hpp  idf_component.yml  main.c  main.cpp  music_mod.hpp  music_player.hpp  rtp_packetizer_mod.hpp  settings.h  udp_server_mod.hpp  video_capture.c  video_capture.h  video_mod.c  video_mod.h  video_mod.hpp  video_stream.hpp  video_stream_ws.hpp  wifi_mod.cpp  wifi_mod.hpp  wifi_mod_bak.hpp
main_bak/: cam_server.c  cam_server.h  control_mod.cpp  control_mod.hpp  example_encoder.c  example_init_video.c  (+2 more)
(+75 files in other folders)
